--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.4",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
